RESOLVED FIXED66140
Patch to fix GTK Windows build after r92308
https://bugs.webkit.org/show_bug.cgi?id=66140
Summary Patch to fix GTK Windows build after r92308
Kalev Lember
Reported 2011-08-12 09:20:34 PDT
r92308 added #include <WebCore/WebCoreHeaderDetection.h> to config.h, but the file is not generated with the autotools build. To fix build breakage, disable the inclusion for GTK, similar to what's done for Qt and Chromium builds.
Attachments
Fix GTK Windows build after r92308. (1020 bytes, patch)
2011-08-12 09:23 PDT, Kalev Lember
no flags
Kalev Lember
Comment 1 2011-08-12 09:23:31 PDT
Created attachment 103778 [details] Fix GTK Windows build after r92308.
Jeff Miller
Comment 2 2011-08-12 10:50:06 PDT
Comment on attachment 103778 [details] Fix GTK Windows build after r92308. Thanks for fixing this. Looks fine to me, but I can't officially r+ the patch since I'm not a reviewer.
Kalev Lember
Comment 3 2011-08-13 01:53:29 PDT
Adam, this is a follow-up to the patch in bug #65634 you reviewed. Jeff said the patch is fine, but he is not a reviewer; could you please review this? Thanks!
Xan Lopez
Comment 4 2011-08-14 03:22:14 PDT
Comment on attachment 103778 [details] Fix GTK Windows build after r92308. r=me
WebKit Review Bot
Comment 5 2011-08-14 05:22:11 PDT
Comment on attachment 103778 [details] Fix GTK Windows build after r92308. Clearing flags on attachment: 103778 Committed r93030: <http://trac.webkit.org/changeset/93030>
WebKit Review Bot
Comment 6 2011-08-14 05:22:15 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.