Fix GTK Windows build after r92308. https://bugs.webkit.org/show_bug.cgi?id=66140

Patch by Kalev Lember <kalevlember@gmail.com> on 2011-08-14
Reviewed by Xan Lopez.

* config.h: Don't try to include WebCoreHeaderDetection.h for GTK.

git-svn-id: svn://svn.chromium.org/blink/trunk@93030 bbb929c8-8fbe-4397-9dbb-9b2b20218538